<resources>
    <string name="app_name">Весть Века</string>
    <string name="click_for_exit">Нажмите ещё раз для выхода</string>
    <string name="god_words">Слова Создателя</string>
    <string name="yet_load">Ещё не загружены. Откройте позже.</string>
    <string name="find">Найти</string>
    <string name="unknown_error">Неизвестная ошибка</string>
    <string name="busy_base_error">База данных занята, попробуйте позже</string>
    <string name="error_load">Ошибка при загрузке</string>
    <string name="touch_to_send">[нажмите чтобы отправить]</string>
    <string name="error">Ошибка</string>
    <string name="site_code">Ошибка на сайте: %d, попробуйте позже</string>
    <string name="site_no_response">Проблемы с сетью, попробуйте позже</string>
    <string name="site_unavailable">Сайт недоступен</string>
    <string name="about_no_response">Возможно, вам надо включить или выключить использование зеркала в домене .COM. Или изменился адрес, с которого загружается информация – попробуйте позже. Подробнее написано в «Справке».</string>
    <string name="download_">Скачать…</string>
    <string name="download_alert">Выберите пункты для скачивания:</string>
    <string name="summary_site">Сводка и объявления</string>
    <string name="other_books">Другие книги</string>
    <string name="otkroveniya_year">Откровения (2004 год)</string>
    <string name="format_tolkovaniya_year">Толкования за 20%02d год</string>
    <string name="book_2016">Послания и Катрены за 2016 год</string>
    <string name="format_poems_year">Катрены за 20%d год</string>
    <string name="format_size">%.1f МБ</string>
    <string name="format_about_size">Максимальный объём для скачивания: %.1f МБ\nНа устройстве потребуется не более %.1f МБ\n\n[Нажмите, чтобы закрыть]</string>
    <string name="delete">Удалить</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="new_name">Новое название</string>
    <string name="open_link">Открыть ссылку</string>
    <string name="send">Отправить</string>
    <string name="error_des">Описание ошибки:</string>
    <string name="input_data">Входные данные:</string>
    <string name="warning">Внимание:</string>
    <string name="select_all">Выбрать всё</string>
    <string name="reset_all">Сбросить всё</string>
    <string name="downloads_all_title">Скачайте все Катрены!</string>
    <string name="downloads_all_msg">Нажмите, чтобы выбрать что скачать.</string>
    <string name="check_out_settings">Ознакомтесь с настройками</string>
    <string name="example_periodic_check">Например, можно задать периодическую проверку наличия новых Катренов</string>
    <string name="address_copied">Адрес скопирован</string>
    <string name="back">&#160;назад</string>
    <string name="loaded">Загружено&#160;</string>
    <string name="list_no_loaded">Список не загружен</string>
    <string name="list_empty">Список пуст</string>
    <string name="mute_notif">Беззвучные</string>
    <string name="tips">Подсказки</string>
    <string name="not_allowed_alarm">Нет разрешения на установку уведомления-будильника</string>
    <string name="new_section">Новое</string>
    <string name="home_screen">Главный</string>
    <string name="summary">Сводка</string>
    <string name="news">Объявления</string>
    <string name="news_dev">Объявления от разработчика</string>
    <string name="novosti">Новости</string>
    <string name="calendar">Календарь</string>
    <string name="book">Книги</string>
    <string name="markers">Закладки</string>
    <string name="journal">Журнал</string>
    <string name="search">Поиск</string>
    <string name="cabinet">Кабинет</string>
    <string name="settings">Настройки</string>
    <string name="help">Справка</string>
    <string name="format_load">Загрузка: %s</string>
    <string name="format_search_date">Поиск: %s %d</string>
    <string name="format_search_proc">Поиск в результатах %d%%</string>
    <string name="format_found">Вы искали %s “%s”.\nНайдено %d соответствий в %d материалах.\nПараметры поиска: %s</string>
    <string name="format_page_no_loaded">Страница %s не загружена.</string>
    <string name="format_month_no_loaded">%s %d не загружен.</string>
    <string name="format_info">Версия приложения: %s (%d)\nВерсия системы: %s (%d)</string>
    <string name="format_opened">%s назад на позиции %.1f%%\n(%s)</string>
    <string name="format_rnd">%s назад\n(%s)\n%s</string>
    <string name="format_scroll_position">%.1f%%\n(остановитесь и увидите текст)</string>
    <string name="format_freed_size">Освобождено: %s МБ</string>
    <string name="format_delete">Удалить %s?</string>
    <string name="new_in_additionally">Новое в Сводке-Дополнительном</string>
    <string name="new_in_doctrine">Новое на сайте Доктрина</string>
    <string name="new_in_academy">Новое на сайте Академии</string>
    <string name="additionally">Дополнительно</string>
    <string name="doctrine">Доктрина</string>
    <string name="academy">Академия</string>
    <string name="open_post">Открыть сообщение</string>
    <string name="ad">Объявление</string>
    <string name="poem">Катрен</string>
    <string name="new_dev_ads">Непрочитанные объявления от разработчика</string>
    <string name="mark_read">Пометить всё прочитанным</string>
    <string name="unread">Непрочитанное</string>
    <string name="access_new_version">Доступна новая версия приложения!</string>
    <string name="current_version">Про текущую версию приложения</string>
    <string name="sync_time">Время сверено с сайтом</string>
    <string name="matches">Совпадает</string>
    <string name="time_deviation">Отклонение на %d сек.</string>
    <string name="updated_page">Страница обновлена</string>
    <string name="welcome_back">С возвращением!</string>
    <string name="epistles">Послания</string>
    <string name="poems">Катрены</string>
    <string name="doctrine_creator">Доктрина Создателя</string>
    <string name="holy_rus">Святая Русь</string>
    <string name="link_to_src">Ссылка на источник</string>
    <string name="rnd_verse">«Случайный» стих</string>
    <string name="rnd_epistle">«Случайное» Послание</string>
    <string name="rnd_poem">«Случайный» Катрен</string>
    <string name="try_again">Попробуйте ещё раз</string>
    <string name="alert_rnd">Скачайте все материалы, прежде чем пользоваться этой функцией!</string>
    <string name="open">Открыть</string>
    <string name="pred_tolk">Предисловие Всевышнего к Толкованиям</string>
    <string name="off_all_tips">Отключить все подсказки</string>
    <string name="look_tips_in_help">Посмотреть подсказки можно в Справке</string>
    <string name="tip_main">Нажмите на звёздочку, чтобы открыть меню действий.\nНа каждом экране набор действий отличается.</string>
    <string name="tip_browser">Чтобы вернуть панели, нажмите «Назад» или включите их возврат при прокрутке наверх в опциях («Автовозврат панелей»).\n\n
    Нижняя панель, слева направо: меню опций, поделиться, добавить в закладки, поиск на странице, обновить (перезагрузить).</string>
    <string name="tip_browser2">Кнопка «На весь экран» позволяет моментом скрыть весь интерфейс, и он вернётся лишь при нажатии на «Назад». Эта кнопка может быть на месте кнопки «вверх/вниз», если та отключена.</string>
    <string name="tip_calendar">Нажмите на месяц, чтобы выбрать месяц и год.</string>
    <string name="tip_search">После поиска здесь появится стрелочка, которая открывает и скрывает панель результатов.\nТам отображается информация о поиске, имеются возможности произвести поиск в результатах (там где «Новый поиск») и экспортировать их.</string>
    <string name="refresh">Обновить</string>
    <string name="to_top">Наверх</string>
    <string name="to_bottom">Вниз</string>
    <string name="close">Закрыть</string>
    <string name="to_prev_result">К предыдущему результату</string>
    <string name="to_next_result">К следующему результату</string>
    <string name="tip_end_list">Достигнут конец списка</string>
    <string name="not_found_page">Страница не найдена и не может быть загружена</string>
    <string name="share">Поделиться</string>
    <string name="copied">Скопировано</string>
    <string name="in_markers">В закладки</string>
    <string name="opt_scale">Оптимальный масштаб</string>
    <string name="src_scale">Исходный масштаб</string>
    <string name="nav_button">Кнопка вверх/вниз</string>
    <string name="collapsing_top">Верх не разворачивать</string>
    <string name="auto_return_panels">Автовозврат панелей</string>
    <string name="num_par">Нумерация абзацев</string>
    <string name="light_theme">Светлое оформление</string>
    <string name="dark_theme">Темное оформление</string>
    <string name="go_to_last_place">Перейти к прошлому месту?</string>
    <string name="not_load_month">Месяц не загружен</string>
    <string name="not_found_reaction">Реакция не найдена, возможно надо загрузить в Сводка-Дополнительно</string>
    <string name="export">Экспорт</string>
    <string name="import_">Импорт</string>
    <string name="edit">Изменить</string>
    <string name="send_file">Отправить файл?</string>
    <string name="not_load_page">Страница не загружена</string>
    <string name="format_collection">Подборка: %s</string>
    <string name="collections">Подборки</string>
    <string name="cancel_rename">Переименование отменено</string>
    <string name="collection_is_empty">Подборока пуста!</string>
    <string name="nothing_edit">Редактировать нечего!</string>
    <string name="no_markers">Список закладок пуст.\nМатериалы можно добавить\nв закладки на экране чтения\n(смотрите меню).</string>
    <string name="help_edit_markers">Приступить к редактированию можно по команде «Изменить» в «звездочке» или по долгому нажатию на элемент (внутри подборок всё аналогично). Затем, после нажатия на три линии или долгого нажатия по элементу, его можно перемещать. Проведя по элементу справа налево (не касаясь трёх линий) – его можно удалить, а слева направо – изменить. Чтобы завершить редактирование с сохранением порядка нажмите на «галочку», без – «назад».</string>
    <string name="marker">Закладка</string>
    <string name="need_set_check">Поставьте хотя бы одну галочку!</string>
    <string name="no_collections">Вне подборок</string>
    <string name="unused_dot">Запятую нельзя использовать</string>
    <string name="title_already_used">Данный заголовок уже используется!</string>
    <string name="paragraph">Абзац</string>
    <string name="position">Позиция</string>
    <string name="sel_pos">Выбрана позиция:&#160;</string>
    <string name="around_at">Приблизительно на&#160;</string>
    <string name="page_entirely">Страница целиком</string>
    <string name="description">Описание</string>
    <string name="add_col">Добавить подборку</string>
    <string name="sel_col">Выбраны подборки:&#160;</string>
    <string name="sel_par">Выбраны абзацы №№:&#160;</string>
    <string name="par_numbers">Абзацы №№&#160;</string>
    <string name="site">Сайт</string>
    <string name="to_load">Скачать</string>
    <string name="today_s">Сегодняшнее!</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="remember_email">запомнить email</string>
    <string name="remember_password">запомнить пароль</string>
    <string name="cabinet_title">Личный кабинет участника Движения</string>
    <string name="notif_new">Проверка обновлений</string>
    <string name="notif_prom">Напоминание о Посыле</string>
    <string name="start_screen">Начальный экран</string>
    <string name="menu">Меню</string>
    <string name="advance">заранее</string>
    <string name="off">выкл</string>
    <string name="on">вкл</string>
    <string name="check_summary">Проверка сводки</string>
    <string name="prom_notif">Напомнить о Посыле</string>
    <string name="often">чаще</string>
    <string name="less">реже</string>
    <string name="set_notif">Настроить сигнал, вибрацию</string>
    <string name="prom">Посыл</string>
</resources>