<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/app_bar_menu"
        android:icon="@drawable/ic_menu"
        android:title="@string/menu"
        app:actionLayout="@layout/menu_item_layout"
        app:showAsAction="always" />

    <item
        android:id="@+id/app_bar_start"
        android:icon="@drawable/ic_calendar"
        android:title="@string/calendar"
        app:showAsAction="always" />

    <item
        android:id="@+id/app_bar_home"
        android:icon="@drawable/ic_home"
        android:title="@string/home_screen"
        app:showAsAction="always"/>

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/app_bar_cabinet"
        android:icon="@drawable/ic_cabinet"
        android:title="@string/cabinet"
        app:showAsAction="always" />
</menu>
