<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ItemBG"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/item_bg"
    android:orientation="vertical"
    android:padding="0dp">

    <LinearLayout
        android:id="@+id/bProm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_bg"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imgProm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:src="@drawable/plus" />

        <TextView
            style="@style/Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/notif_prom" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/pProm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvPromNotif"
            style="@style/Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/prom_notif" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp">

            <SeekBar
                android:id="@+id/sbPromTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:max="60"
                android:progress="0"
                android:progressDrawable="@drawable/progress_bar"
                android:thumb="@drawable/sb_thumb" />

            <TextView
                android:id="@+id/tvPromOn"
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="2dp"
                android:text="@string/on" />

            <TextView
                android:id="@+id/tvPromOff"
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="2dp"
                android:layout_marginRight="20dp"
                android:text="@string/off" />

            <TextView
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/sbPromTime"
                android:layout_alignParentLeft="true"
                android:text="@string/prom" />

            <TextView
                style="@style/Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/sbPromTime"
                android:layout_alignParentRight="true"
                android:text="@string/advance" />
        </RelativeLayout>

        <Button
            android:id="@+id/bPromSet"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/set_notif" />
    </LinearLayout>
</LinearLayout>