<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/ItemBG"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/item_bg"
    android:orientation="vertical"
    android:padding="0dp">

    <LinearLayout
        android:id="@+id/bScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_bg"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imgScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/start_screen"
            android:src="@drawable/plus" />

        <TextView
            style="@style/Label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/start_screen" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/pScreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/rbMenu"
            style="@style/CheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu" />

        <RadioButton
            android:id="@+id/rbCalendar"
            style="@style/CheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calendar" />

        <RadioButton
            android:id="@+id/rbSummary"
            style="@style/CheckBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rss" />

    </RadioGroup>
</LinearLayout>